@@ -1,8 +1,8 @@
-FROM hmcts/cnp-java-base:openjdk-jre-8-alpine-1.1
+FROM hmcts/cnp-java-base:openjdk-jre-8-alpine-1.4
 
 ENV APP div-case-formatter-service.jar
-ENV APPLICATION_TOTAL_MEMORY 512M
-ENV APPLICATION_SIZE_ON_DISK_IN_MB 53
+ENV APPLICATION_TOTAL_MEMORY 1024M
+ENV APPLICATION_SIZE_ON_DISK_IN_MB 59
 
 COPY build/libs/$APP /opt/app/
 
@@ -11,5 +11,3 @@ WORKDIR /opt/app
 HEALTHCHECK --interval=100s --timeout=100s --retries=10 CMD http_proxy="" wget -q http://localhost:4011/health || exit 1
 
 EXPOSE 4011
-
-CMD ["sh", "-c", "java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ${JAVA_OPTS} -jar /opt/app/$APP"
